--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Les Animaux</h2>
         <p>Découvrez nos animaux mythiques et apprenez-en davantage sur leur habitat et leur mode de vie.</p>
         
-        <img src="C:\Users\Utilisateur\OneDrive\Images\animal_imag_3.jpg" alt="le Papélionphant: le tout premier animal a avoir mis les pieds dans notre parc. " 	style="vertical-align: middle; width="100px"">
+        <img src="animal_imag_3.jpg" alt="le Papélionphant: le tout premier animal a avoir mis les pieds dans notre parc. " 	style="vertical-align: middle; width="100px"">
 	<span style="display: inline-block;vertical-align: middle">
 	Cet animal se nomme le Papélionphant. C'est un animal fantastique et <BR>
 	très difficile a croiser en raison de sa rareté, sa particularité <BR> 
@@ -38,4 +38,5 @@
 	</span>
  	
 </body>
+
 </html>
