--- a/index.html
+++ b/index.html
@@ -1,42 +1,144 @@
 <html> 
 <head>
-   
    <meta charset="UTF-8">
-    <title>Le célèbre Zoo d'Aiacciu </title>
+   <title>Le célèbre Zoo d'Aiacciu</title>
 
+   <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            background-color: #3D6AA2;
+            color: white;
+            padding: 50px;
+            text-align: center;
+        }
+
+        h2 {
+            color: #3D6AA2;
+            margin-top: 30px;
+        }
+
+        p {
+            margin: 20px;
+            line-height: 1.6;
+        }
+
+        a {
+            color: #3D6AA2;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .widget-container {
+            text-align: center;
+            margin: 20px;
+        }
+
+        .animal {
+            margin: 20px;
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+        }
+
+        .animal img {
+            width: 200px;
+            height: auto;
+            border-radius: 8px;
+        }
+    </style>
 </head>
+
 <body>
-    <center>
-        <h1>Bienvenue au célèbre Zoo d'Aiacciu </h1>
-        <p><h3>Le Zoo Fantastique d'Ajaccio est un lieu unique en Corse, perché dans les hauteurs de la ville.<BR>
-	 Il accueille des animaux imaginaires venus tout droit des légendes :<BR>
-	 gobelins, dragons, et créatures mystérieuses. Un endroit magique où tous les pinzuti sont chaleureusement accueillis !</h3>
-	Vous trouverez ici comme données supplémentaires les <a href="tarif.html">Tarifs</a>
-	mais aussi la <a href="reglementation.html">Réglementation</a></p>
-   </center>
 
-   
-        <h2>Notre Zoo</h2>
-        <p> Les braves gens qui oseront s'approcher de ce majestueux Zoo ne seront pas déçus !<BR>
-	Cependant veillez a bien regarder la localisation et la meteo ci dessous car <BR> 
-	les créatures n'apparaitront que les jours d'extreme beau temps ! Et a certains endroits du parc seulement ! </p>
+    <h1>Bienvenue au célèbre Zoo d'Aiacciu</h1>
 
-	<iframe id="widget_autocomplete_preview"  width="150" height="300" frameborder="0" src="https://meteofrance.com/widget/prevision/200040##3D6AA2" title="Prévisions 	Ajaccio par Météo-France"> </iframe>
+    <p>
+        <h3>
+            Le Zoo Fantastique d'Ajaccio est un lieu unique en Corse, perché dans les hauteurs de la ville.<br>
+            Il accueille des animaux imaginaires venus tout droit des légendes :<br>
+            gobelins, dragons, et créatures mystérieuses. Un endroit magique où tous les pinzuti sont chaleureusement accueillis !
+        </h3>
+     <p>Vous trouverez ici les informations supplémentaires :</p>
+<ul style="list-style-type: square; margin-left: 40px; line-height: 1.6;">
+    <li><a href="tarif.html">Tarifs</a></li>
+    <li><a href="reglementation.html">Réglementation</a></li>
+    <li><a href="activites.html">Les activités</a></li>
+    <li><a href="horaires.html">Horaires</a></li>
+    <li><a href="fauves.html">Animaux</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="acces.html">Plan d'accès</a></li>
+    <li><a href="photo.html">Quelques photos</a></li>
+    <li><a href="manger.html">Restauration</a></li>
+</ul>
 
-	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d8999.917865879177!2d8.709372998146986!3d41.91724928881432!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!	4v1758204432085!5m2!1sfr!2sfr" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
-        <h2>Les Animaux</h2>
-        <p>Découvrez nos animaux mythiques et apprenez-en davantage sur leur habitat et leur mode de vie.</p>
-        
-        <img src="animal_imag_3.jpg" alt="le Papélionphant: le tout premier animal a avoir mis les pieds dans notre parc. " 	style="vertical-align: middle; width="100px"">
-	<span style="display: inline-block;vertical-align: middle">
-	Cet animal se nomme le Papélionphant. C'est un animal fantastique et <BR>
-	très difficile a croiser en raison de sa rareté, sa particularité <BR> 
-	est qu'il est issu d'un croisement entre un lion, un éléphant <BR>
-	et l'implication de certains gênes du papillon, il <BR>
-	possede donc la férocité du félin, la force des éphantidés grace a ses défenses et des magnifiques ailes tel un insecte. 
-	</span>
- 	
+    </p>
+
+    <h2>Notre Zoo</h2>
+    <p>
+        Les braves gens qui oseront s'approcher de ce majestueux Zoo ne seront pas déçus !<br>
+        Cependant, veillez à bien regarder la localisation et la météo ci-dessous car <br> 
+        les créatures n'apparaîtront que les jours d'extrême beau temps, et à certains endroits du parc seulement !
+    </p>
+
+   <div class="widget-container" style="text-align:center; margin:20px;">
+
+    <!-- Nouveau Widget Météo -->
+    <div id="cont_MzAzODMzNHwxfDF8MXwxfCNiN2I3Yjd8NnwjZmZmZmZmfGd8" style="margin-bottom:30px;">
+        <div id="spa_MzAzODMzNHwxfDF8MXwxfCNiN2I3Yjd8NnwjZmZmZmZmfGd8">
+            <a id="a_MzAzODMzNHwxfDF8MXwxfCNiN2I3Yjd8NnwjZmZmZmZmfGd8" 
+               href="https://www.meteocity.com/france/ajaccio-v3038334?utm_medium=widget&utm_source=referral&utm_campaign=france-ajaccio-v3038334&utm_content=location" 
+               target="_top" 
+               style="color:#333;text-decoration:none;">
+               Météo Ajaccio
+            </a> 
+            ©
+            <a target="_top" href="https://www.meteocity.com?utm_medium=widget&utm_campaign=france-ajaccio-v3038334&utm_content=homepage">Meteocity</a>
+        </div>
+        <script type="text/javascript" src="https://www.meteocity.com/widget/js/MzAzODMzNHwxfDF8MXwxfCNiN2I3Yjd8NnwjZmZmZmZmfGd8"></script>
+    </div>
+
+    <!-- Carte Google Maps -->
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d8999.917865879177!2d8.709372998146986!3d41.91724928881432!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1758204432085!5m2!1sfr!2sfr" 
+        width="600" 
+        height="350" 
+        style="border:0; display:block; margin:auto;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+
+</div>
+
+    <h2>Les Animaux</h2>
+    <p>
+        Découvrez nos animaux mythiques et apprenez-en davantage sur leur habitat et leur mode de vie.
+    </p>
+
+    <div class="animal">
+        <img src="images/animal_imag_3.jpg" alt="le Papélionphant">
+        <p>
+            Cet animal se nomme <strong>le Papélionphant</strong>. C'est un animal fantastique et très difficile à croiser en raison de sa rareté.<br>
+            Sa particularité est qu'il est issu d'un croisement entre un lion, un éléphant et certains gènes du papillon.<br>
+            Il possède donc :
+            <ul>
+                <li>La férocité du félin</li>
+                <li>La force des éléphants grâce à ses défenses</li>
+                <li>De magnifiques ailes telles un insecte</li>
+            </ul>
+        </p>
+    </div>
+
 </body>
-
 </html>
