--- a/activites.html
+++ b/activites.html
@@ -28,9 +28,7 @@
     </p>
 
     <div align="center" style="margin-bottom:30px;">
-       <video width="100%" height="auto" controls>
-    <source src="activites.mp4" type="video/mp4">
-        </video>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/KamwfLDdfz0?si=c34L3hPzsEqdGc1y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <p align="center" style="font-size:16px;">
@@ -44,4 +42,5 @@
     </div>
 
 </body>
+
 </html>
