--- a/activites.html
+++ b/activites.html
@@ -18,7 +18,7 @@
 
     <ul style="width:60%; margin:auto; line-height:2; font-size:18px;">
         <li><b>Ateliers pédagogiques :</b> Apprenez les secrets de nos créatures fantastiques, et peut-être même comment échapper au dragon …</li>
-        <li><b>Rencontres avec les animaux :</b> Approchez nos animaux légendaires… mais attention au Papélionphant, il adore chatouiller !<br><img src="Images/lion.png" alt="Rencontre avec les animaux" style="max-width:250px; display:block; margin:10px auto; border-radius:8px;"></li>
+        <li><b>Rencontres avec les animaux :</b> Approchez nos animaux légendaires… mais attention au Papélionphant, il adore chatouiller !<br><img src="lion.png" alt="Rencontre avec les animaux" style="max-width:250px; display:block; margin:10px auto; border-radius:8px;"></li>
         <li><b>Chasses au trésor :</b> Une aventure pour les enfants à travers tout le parc, avec un petit clin d'œil aux trésors corses cachés .</li>
         <li><b>Animations spéciales :</b> Spectacles de dragons et autres créatures légendaires… et peut-être un vieux sanglier du village qui se joint à la fête !</li>
     </ul>
@@ -44,4 +44,5 @@
 </body>
 
 </html>
+
 
