--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </p>
 
     <div class="animal">
-        <img src="images/animal_imag_3.jpg" alt="le Papélionphant">
+        <img src="animal_imag_3.jpg" alt="le Papélionphant">
         <p>
             Cet animal se nomme <strong>le Papélionphant</strong>. C'est un animal fantastique et très difficile à croiser en raison de sa rareté.<br>
             Sa particularité est qu'il est issu d'un croisement entre un lion, un éléphant et certains gènes du papillon.<br>
@@ -141,4 +141,5 @@
     </div>
 
 </body>
+
 </html>
