--- a/restauration.html
+++ b/restauration.html
@@ -20,15 +20,15 @@
    <ul style="width:60%; margin:auto; line-height:2; font-size:18px;">
       <li>
          <b>🥪 Snacks :</b> Sandwichs, paninis et petites douceurs pour une pause rapide. <br>
-         <img src="URL_IMAGE_SNACK" alt="Snacks du zoo" style="max-width:300px; display:block; margin:10px auto; border-radius:8px;">
+         <img src="snack.jpg" alt="Snacks du zoo" style="max-width:300px; display:block; margin:10px auto; border-radius:8px;">
       </li>
       <li>
          <b>🍽️ Restaurant :</b> Plats typiques corses et repas conviviaux pour toute la famille. <br>
-         <img src="URL_IMAGE_RESTAURANT" alt="Restaurant du zoo" style="max-width:300px; display:block; margin:10px auto; border-radius:8px;">
+         <img src="restau.jpg" alt="Restaurant du zoo" style="max-width:300px; display:block; margin:10px auto; border-radius:8px;">
       </li>
       <li>
          <b>🥤 Buvette :</b> Boissons fraîches, glaces et petites gourmandises pour se rafraîchir. <br>
-         <img src="URL_IMAGE_BUVETTE" alt="Buvette du zoo" style="max-width:300px; display:block; margin:10px auto; border-radius:8px;">
+         <img src="buvette.jpg" alt="Buvette du zoo" style="max-width:300px; display:block; margin:10px auto; border-radius:8px;">
       </li>
    </ul>
 
@@ -43,4 +43,5 @@
    </div>
 
 </body>
+
 </html>
