--- a/fauves.html
+++ b/fauves.html
@@ -24,7 +24,7 @@
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
          <img src="URL_IMAGE_LION" alt="Lion" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
-            <h3 style="color:#3D6AA2;">🦁 Le Lion</h3>
+            <h3 style="color:#3D6AA2;"> Le Lion</h3>
             <p>Roi des animaux, il impressionne par sa crinière majestueuse et son rugissement puissant. 
             Venez admirer son élégance et sa puissance.</p>
          </div>
@@ -34,7 +34,7 @@
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
          <img src="URL_IMAGE_TIGRE" alt="Tigre" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
-            <h3 style="color:#3D6AA2;">🐯 Le Tigre</h3>
+            <h3 style="color:#3D6AA2;"> Le Tigre</h3>
             <p>Avec ses rayures uniques, il est à la fois un redoutable chasseur et un félin d’une grâce incroyable. 
             Un véritable spectacle de force et de beauté.</p>
          </div>
@@ -44,7 +44,7 @@
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
          <img src="URL_IMAGE_PANTHERE" alt="Panthère" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
-            <h3 style="color:#3D6AA2;">🐆 La Panthère</h3>
+            <h3 style="color:#3D6AA2;"> La Panthère</h3>
             <p>Discrète et mystérieuse, sa robe sombre et ses mouvements souples en font l’une des créatures les plus fascinantes du parc.</p>
          </div>
       </div>
@@ -53,7 +53,7 @@
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
          <img src="URL_IMAGE_GUEPARD" alt="Guépard" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
-            <h3 style="color:#3D6AA2;">⚡ Le Guépard</h3>
+            <h3 style="color:#3D6AA2;"> Le Guépard</h3>
             <p>Animal terrestre le plus rapide du monde, il peut atteindre des vitesses incroyables. 
             Une véritable fusée vivante à observer dans toute sa splendeur.</p>
          </div>
@@ -68,4 +68,5 @@
    </div>
 
 </body>
+
 </html>
