--- a/photo.html
+++ b/photo.html
@@ -3,35 +3,83 @@
 <head>
    <meta charset="UTF-8">
    <title>Galerie Photos - Zoo d'Aiacciu</title>
+   <style>
+      body {
+         background-color: #f3f3f3;
+         color: #333;
+         font-family: Arial, sans-serif;
+         margin: 0;
+      }
+      h1 {
+         background-color: #3D6AA2;
+         color: white;
+         text-align: center;
+         padding: 20px;
+      }
+      h2 {
+         color: #3D6AA2;
+         text-align: center;
+      }
+      p {
+         font-size: 18px;
+         width: 70%;
+         margin: auto;
+         text-align: center;
+      }
+      .gallery {
+         display: grid;
+         grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+         gap: 20px;
+         width: 90%;
+         margin: 30px auto;
+      }
+      .gallery img {
+         width: 100%;
+         height: 300px;
+         object-fit: cover;
+         border-radius: 12px;
+         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+         transition: transform 0.3s ease;
+      }
+      .gallery img:hover {
+         transform: scale(1.08);
+      }
+      .btn {
+         display: inline-block;
+         background-color: #3D6AA2;
+         color: white;
+         padding: 10px 20px;
+         text-decoration: none;
+         border-radius: 5px;
+         margin: 20px auto;
+      }
+      .btn:hover {
+         background-color: #2b4d73;
+      }
+   </style>
 </head>
 
-<body bgcolor="#f3f3f3" text="#333">
+<body>
 
-   <h1 align="center" style="background-color:#3D6AA2; color:white; padding:20px;">
-      Galerie Photos du Zoo d'Aiacciu
-   </h1>
+   <h1>Galerie Photos du Zoo d'Aiacciu</h1>
 
-   <h2 align="center" style="color:#3D6AA2;">🐾 Découvrez nos animaux et le parc</h2>
+   <h2>🐾 Découvrez nos animaux et le parc</h2>
 
-   <p align="center" style="font-size:18px; width:70%; margin:auto;">
+   <p>
       Voici quelques photos pour vous donner un aperçu de l'ambiance unique du zoo :
    </p>
 
-   <div align="center" style="margin:30px auto;">
-
-      <img src="ours.jpg" alt="Animal 1" style="max-width:300px; margin:10px; border-radius:8px;">
-      <img src="girafe.jpg" alt="Animal 2" style="max-width:300px; margin:10px; border-radius:8px;">
-      <img src="singe.jpg" alt="Animal 3" style="max-width:300px; margin:10px; border-radius:8px;">
-      <img src="zoovue.jpg" alt="Zoo vue générale" style="max-width:300px; margin:10px; border-radius:8px;">
-      <img src="rhino.jpg" alt="Animal 4" style="max-width:300px; margin:10px; border-radius:8px;">
-      <img src="tigre.jpg" alt="Animal 5" style="max-width:300px; margin:10px; border-radius:8px;">
-
+   <div class="gallery">
+      <img src="ours.jpg" alt="Animal 1">
+      <img src="girafe.jpg" alt="Animal 2">
+      <img src="singe.jpg" alt="Animal 3">
+      <img src="zoovue.jpg" alt="Zoo vue générale">
+      <img src="rhino.jpg" alt="Animal 4">
+      <img src="tigre.jpg" alt="Animal 5">
    </div>
 
-   <div align="center" style="margin-top:20px;">
-      <a href="index.html" style="background-color:#3D6AA2; color:white; padding:10px 20px; text-decoration:none; border-radius:5px;">
-         ⬅ Retour à l'accueil
-      </a>
+   <div style="text-align:center;">
+      <a href="index.html" class="btn">⬅ Retour à l'accueil</a>
    </div>
 
 </body>
