--- a/photo.html
+++ b/photo.html
@@ -73,7 +73,7 @@
       <img src="ours.jpg" alt="Animal 1">
       <img src="girafe.jpg" alt="Animal 2">
       <img src="singe.jpg" alt="Animal 3">
-      <img src="zoovue.jpg" alt="Zoo vue générale">
+      <img src="zoovue.webp" alt="Zoo vue générale">
       <img src="rhino.jpg" alt="Animal 4">
       <img src="tigre.jpg" alt="Animal 5">
    </div>
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
