--- a/photo.html
+++ b/photo.html
@@ -76,6 +76,8 @@
       <img src="zoovue.webp" alt="Zoo vue générale">
       <img src="rhino.jpg" alt="Animal 4">
       <img src="tigre.jpg" alt="Animal 5">
+      <img src="elephant.jpg" alt="Animal 6">
+      <img src="lynx.jpg" alt="Animal 7">
    </div>
 
    <div style="text-align:center;">
@@ -84,4 +86,5 @@
 
 </body>
 </html>
+
 
