--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <li><a href="horaires.html">Horaires</a></li>
     <li><a href="fauves.html">Animaux</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="acces.html">Plan d'accès</a></li>
+    <li><a href="visiter.html">Plan d'accès</a></li>
     <li><a href="photo.html">Quelques photos</a></li>
     <li><a href="manger.html">Restauration</a></li>
 </ul>
@@ -133,4 +133,5 @@
 </body>
 
 </html>
+
 
