--- a/acces.html
+++ b/acces.html
@@ -20,16 +20,7 @@
 
    <!-- Widget Google Maps -->
    <div align="center" style="margin:30px 0;">
-      <!-- Carte Google Maps -->
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d8999.917865879177!2d8.709372998146986!3d41.91724928881432!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1758204432085!5m2!1sfr!2sfr" 
-        width="600" 
-        height="350" 
-        style="border:0; display:block; margin:auto;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d11875.082631628693!2d8.711458383156154!3d41.91928868457714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!3e2!4m3!3m2!1d41.9238338!2d8.7377194!4m3!3m2!1d41.917234!2d8.7050922!5e0!3m2!1sfr!2sfr!4v1758821250745!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
    </div>
 
@@ -45,3 +36,4 @@
 
 </body>
 </html>
+
