--- a/visiter.html
+++ b/visiter.html
@@ -18,17 +18,7 @@
       Utilisez la carte ci-dessous pour préparer votre visite :
    </p>
 
-   <!-- Widget Google Maps -->
-   <div align="center" style="margin:30px 0;">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d8999.917865879177!2d8.709372998146986!3d41.91724928881432!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1758204432085!5m2!1sfr!2sfr" 
-        width="600" 
-        height="350" 
-        style="border:0; display:block; margin:auto;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4238.925123426375!2d1.345548027589505!3d47.24629938294607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1758821438994!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    </div>
 
    <p align="center" style="font-size:16px; width:70%; margin:auto;">
@@ -57,4 +47,5 @@
    </div>
 
 </body>
+
 </html>
