--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <li><a href="visiter.html">Equipement+plan</a></li>
     <li><a href="acces.html">Plan d'accès</a></li>
     <li><a href="photo.html">Quelques photos</a></li>
-    <li><a href="manger.html">Restauration</a></li>
+    <li><a href="restauration.html">Restauration</a></li>
 </ul>
 
     </p>
@@ -134,6 +134,7 @@
 </body>
 
 </html>
+
 
 
 
