--- a/fauves.html
+++ b/fauves.html
@@ -22,7 +22,7 @@
 
       <!-- Lion -->
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
-         <img src="URL_IMAGE_LION" alt="Lion" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
+         <img src="lionblanc4.webp" alt="Lion" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
             <h3 style="color:#3D6AA2;"> Le Lion</h3>
             <p>Roi des animaux, il impressionne par sa crinière majestueuse et son rugissement puissant. 
@@ -32,7 +32,7 @@
 
       <!-- Tigre -->
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
-         <img src="URL_IMAGE_TIGRE" alt="Tigre" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
+         <img src="TIGRE.jpg" alt="Tigre" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
             <h3 style="color:#3D6AA2;"> Le Tigre</h3>
             <p>Avec ses rayures uniques, il est à la fois un redoutable chasseur et un félin d’une grâce incroyable. 
@@ -42,7 +42,7 @@
 
       <!-- Panthère -->
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
-         <img src="URL_IMAGE_PANTHERE" alt="Panthère" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
+         <img src="Panthère_Noire.jpg" alt="Panthère" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
             <h3 style="color:#3D6AA2;"> La Panthère</h3>
             <p>Discrète et mystérieuse, sa robe sombre et ses mouvements souples en font l’une des créatures les plus fascinantes du parc.</p>
@@ -51,7 +51,7 @@
 
       <!-- Guépard -->
       <div style="display:flex; align-items:center; margin:30px 0; background:white; padding:15px; border-radius:8px;">
-         <img src="URL_IMAGE_GUEPARD" alt="Guépard" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
+         <img src="GUEPARD.jpg" alt="Guépard" style="width:250px; height:auto; border-radius:8px; margin-right:20px;">
          <div>
             <h3 style="color:#3D6AA2;"> Le Guépard</h3>
             <p>Animal terrestre le plus rapide du monde, il peut atteindre des vitesses incroyables. 
@@ -70,3 +70,4 @@
 </body>
 
 </html>
+
